// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 bedalP"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 kUvEKQ"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dAWWZq"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 gGKbiL"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dAWWZq"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 iSRQOX"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dAWWZq"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dAWWZq"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 OmJsh"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 fEWbpp"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 bmLMm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 gblWrj FormField__FormFieldBox-sc-m9hood-0 chvcoo RadioInput__StyledFormField-sc-1brmdkl-0 fjZByZ"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 hqVIvd FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dAWWZq"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 cucuWK StyledRadioButton-sc-g1f6ld-5 djlZiT"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 jGzZeQ"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 dmScnA StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kgLYuc"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 jGuIZY"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fWPyPA"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
